# carbide

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  prod.docker-compose.yml  pyproject.toml
app/: __main__.py  run.py
